--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 body {
 	font-family: Noto Sans, sans-serif;
 }
-#background {
-    width: 100%; 
-    height: 100%; 
-    position: fixed; 
-    left: 0px; 
-    top: 7px; 
-    z-index: -1;
+
+/*////////// BACKGROUNDS //////////*/
+#background {   
+  background: url(../resources/bg.png) no-repeat;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
 }
+
+/*////////// ETC //////////*/
+
+
 .stretch {
     width:100%;
     height:100%;
