--- a/css/style.css
+++ b/css/style.css
@@ -1,181 +1,182 @@
-body {
-	font-family: Noto Sans, sans-serif;
-}
+	/*////////// GENERAL STYLINGS //////////*/
 
-/*////////// BACKGROUNDS //////////*/
-#background {   
-  background: url(../resources/bg.png) no-repeat;
-  position: absolute;
-  width: 100%;
-  z-index: -1;
-}
+	body {
+		background-color: white;
+	    background-image: url('../resources/bg.png');
+	    background-size: 100% 100vh;
+	    background-repeat: no-repeat;
+	    background-attachment: fixed;
+	    padding-top: 0.615em;
+	}
+	html, body {
+	    width: 100%; /* IE */
+	  	max-width: 100%; /* FF, Safari, Chrome */
+       	margin: 0;
+	}
 
-/*////////// ETC //////////*/
+/*////////// FONT STYLES //////////*/
+
+	nav li {
+    	font-size: 1.5em;
+    }
+	h1, h2, {
+		font-family: 'Oswald', sans-serif;
+	}
+	h1 {
+		font-size: 3.75em;
+	}
+	h2 {
+		font-size: 3em;
+	}
+	h3 {
+		font-size: 2.75em;
+	}
+	p {
+		font-size: 2.25em;
+		line-height: 1.75em;
+		font-family: 'Raleway', sans-serif;
+	}
+
+/*////////// SECTIONS - (Intro) //////////*/
+
+	#intro {
+		height: 100vh;
+		color: white;
+		display: flex;
+	  	align-items: center;
+	  	justify-content: center;
+	  	text-align: center;
+	}
+
+	#header{
+		line-height: 150%;
+		margin:  1.5em auto;
+	}
+
+/*////////// SECTIONS - (All) //////////*/
+
+	.heading {
+		text-align: center;
+		margin: 10em auto 0;
+		background: none;
+	}
+	.companyLogo {
+		width: 30em;
+    	display: block;
+    	margin: 2.5em auto;
+    	text-align: center;
+	}
+	.btn-primary {
+		margin: 2.5em auto;
+	}
+	.company {
+		text-align: center;
+	}
+	.row {
+		margin: 5em auto;
+	}
+
+/*////////// SECTIONS - (Contact) //////////*/
+
+	.contacts{
+		text-align: center;
+		
+	}
 
 
-.stretch {
-    width:100%;
-    height:100%;
-}
-#break {
-	height: .25em;
-	width: 15em;
-	background: #191F59;
-	margin: 2.5em auto;
-}
-.breakMini {
-	height: .25em;
-	width: 10em;
-	background: #FFEB3B;
-	margin: 1.5em auto;
-}
-.separator {
-	background: transparent;
-	height: 20em;
-}
-img.icon:hover {
-    background-color: white;
-    width:49px;
-    height:49px;
-    border-radius:250px;
-}
-.icon {
-	width: 45px;
-	height: 45px;
-	margin: 0 25px;
-}
-#mylogo {
-	width: 25em;
-	height: 10em;
-	margin: 0em auto 2.5em;
-}
-h1 {
-	text-align: center;
-	font-size: 2em;
-	margin: 0 auto;
-	color: #ffffff;
-}
-h2 {
-	text-align: center;
-	font-size: 1.25em;
-	margin: 0em auto 2.5em;
-	color: #ffffff;
-}
-.member {
-	margin: 1.5em 0;
-	color: #000000;
-}
-.address {
-	margin: 1.5em 0;
-	color: #191F59;
-	line-height: 1.5em;
-}
-.location {
-	color: #191F59;
-}
-#header {
-	text-align: center;
-	line-height: 150%;
-}
-#heading{
-	background: #FFFFFF;
-	width: 33%;
-}
-#sectionhead{
-	margin: 2em 0;
-	text-align: center;
-}
-#intro {
-	margin: 5em auto;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	height: 100vh;
-	color: #fff; 
-	font-family: 'Oswald', sans-serif;
-}
-#home {
- 	margin:5em auto;
- 	width: 60%;
-}
-#powerBoiler {
-	background:rgba(54,66,146, 0.75);
-	height: 100%;
-	color: black;
-	font-family: 'Oswald', sans-serif;
-	border-top: 5em double transparent;
-	margin-top: -5em;
-	padding-bottom: 5em;
-}
-#exchangerCooling {
-	height: 100%;
-	color: black;
-	font-family: 'Oswald', sans-serif;
-	background:rgba(54,66,146, 0.75);
-	border-top: 5em double transparent;
-	margin-top: -5em;
-	padding-bottom: 5em;
-}
-#tech {
-	height: 100%;
-	color: black;
-	font-family: 'Oswald', sans-serif;
-	background:rgba(54,66,146, 0.75);
-	border-top: 5em double transparent;
-	margin-top: -5em;
-	padding-bottom: 5em;
-}
-#contact {
-	height: 100%;
-	width: 100%;
-	color: black;
-	font-family: 'Oswald', sans-serif;
-	background:rgba(54,66,146, 0.75);
-	border-top: 5em double transparent;
-	margin-top: -5em;
-	padding-bottom: 5em;
-	justify-content: center;
-	flex-direction: column;
-	text-align: center;
-}
-legend {
-	color: white;
-	text-align: center;
-}
-p {
-	font-size: 1.25em;
-	width: 80%;
-	height: 100%;
-	text-align: center;
-	margin: 2em auto;
-}
-.wrapper {	
-	width: 100%;
-	margin: auto;
-}
-.wrapper2 {;
-	width: 95%;
-	margin: auto;
-}
-.company {
-	margin: 1.5em auto;
-	padding: 2.5em 2.5em;
-	width: 80%;
-	height: auto;
-	background:rgba(255,255,255, 1);
-	border-radius: 1em;
-}
-.companyLogo {
-	width: 15em;
-	height: auto;
-	display: block;
-	margin: 1em auto;
-}
-.team {
-	margin: 1.5em;
-	display: inline-table;
-	border-radius: 1em;
-	padding: 1.5em;
-	background: #FFFFFF;
+/*//// CONTACT SCROLL FIX //////*/
+
+	#contact:before { 
+		display: block; 
+		content: " "; 
+		margin-top: -5px; 
+		height: 5px; 
+		visibility: hidden; 
+	}
+
+/*////////// SECTIONS - (Separator) //////////*/
+
+	.separator {
+		background: none;
+		height: 25em;
+	}
+
+
+/*==================================================
+=            Bootstrap 3 Media Queries             =
+==================================================*/
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (min-width : 320px) {
+     	body {
+     		font-size: 75%
+     	}
+     	*[id^="section"]{
+    		background: white;
+    	}
+    	.heading {
+			color: #191F59;
+		}
+		.break {
+			background: #191F59;
+		    width: 15em;
+		    margin: 2.5em auto 5em;
+		    height: 0.5em;
+		}
+
+		.breakMini {
+			background: #364292;
+		    width: 3em;
+		    margin: 2.5em 1em;
+		    display: inline-flex;
+		    height: 0.5em;
+	    } 
+	    .company {
+	    	background: none;
+	    }
+	    .card {
+	    	background: white;
+	    	margin: 30px auto;
+	    	padding: 5px 0;
+	    }
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+    	body {
+     		font-size: 80%
+     	}
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+    	body {
+     		font-size: 90%
+     	}
+     	*[id^="section"]{
+    		background: none;
+    	}
+		.company {
+			border-radius: 1em;
+			padding: 0 7.5em;
+			background: white;
+		}
+		.heading {
+			color: white;
+		}
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+    	body {
+     		font-size: 100%
+     	}
+     	.contacts{
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		}
+		.card {
+	    	border: solid 1em #191F59;
+	    	border-radius: 1em;
+	    	height: 100%
+	    	}
+     @media only screen and (min-width : 1150px){
+		
 }
